# ChameleonUltra

./: .clang-format  .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  How_to_use_Firmware.md  LF_INTEGRATION_COMPLETE.md  README.md  Read.me  Technical_White_Paper.md  attack_card.py  auto_read_card.py  build_dev.ps1  chameleon.sh  chameleon_lf_debug_root.py  conduct_attacks.py  direct_mf_api.py  fix_lf_cli.py  flake.nix  install_lf_debug.sh  lf_cli_final_fix.py  read_hf_mf_api.py  read_hf_mf_data.py  read_nfc_data.py  ruff.toml  setup_dependencies.sh  tmp_scan.py  users-guide.md
.github/: trigger.txt.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
Photos/: Github
docs/: README.md  chameleonultragui.md  cli.md  development.md  firmware.md  gui.md  hardware.md  home.md  modding.md  mtoolsble.md  mtoolslite.md  protocol.md  quickstart.md  sdk.md  technical_whitepaper.md  troubleshooting.md
docs/images/: Makefile  (+1 more)
firmware/: .gitignore  Dockerfile  Makefile.defs  build.ps1  build.sh  docker-compose.yml  flash-dfu-app.sh  flash-dfu-full.sh  flash-dfu-sdbl.sh  format.sh  query
lf_cli_package/: COMPLETE_PACKAGE_INDEX.md  DELIVERY_SUMMARY.md  chameleon_cli_lf_enhanced.py  chameleon_lf_commands.py  chameleon_lf_protocols.py  contribution_analysis.md  integrate_lf_cli.py  lf_cli_design.md
software/: .gitignore  README.md  pyinstaller.spec  pyproject.toml
software/chameleon/: cli.py  cmd.py  com.py  crypto1.py  enum.py  hardnested_utils.py  unit.py  utils.py
software/script/: .chameleon_cli_unit.py.swp  attack_card.py  chameleon _cli_unit.py  chameleon _cmd.py  chameleon _enum.py  chameleon_cli_lf_enhanced.py  chameleon_cli_main.py  chameleon_cli_unit.py  chameleon_cli_unit.py.backup  chameleon_cmd.py  chameleon_com.py  chameleon_cstruct.py  chameleon_enum.py  chameleon_lf_commands.py  chameleon_lf_protocols.py  chameleon_status.py  chameleon_utils.py  crypto1.py  hardnested_utils.py  hf14a_sniff_io.py  hf14a_trace_io.py  integrate_lf_cli.py  pytest.ini  read_uid.py  requirements.android.txt  requirements.txt
software/script/tests/: output_grabber.py  test_cli_entrypoint.py  test_cli_unit.py  test_crypto1.py  test_hard_acquire.py  test_jablotron_modulator.py  test_lf_cli.py  test_ultra.py
software/src/: CMakeLists.txt  bucketsort.c  bucketsort.h  build_win.ps1  common.c  common.h  crapto1.c  crapto1.h  crypto1.c  darkside.c  mfkey.c  mfkey.h  mfkey32.c  mfkey32v2.c  mfkey64.c  mfulc_des_brute.c  nested.c  nested_util.c  nested_util.h  parity.c  parity.h  staticnested.c  staticnested_1nt.c  staticnested_2x1nt_rf08s.c  staticnested_2x1nt_rf08s_1key.c
software/src/HardnestedRecovery/: Makefile  cmdhfmfhard.c  cmdhfmfhard.h  crapto1.c  crapto1.h  crypto1.c  hardnested_main  hardnested_main.c  parity.h
software/src/HardnestedRecovery/hardnested/: hardnested_benchmark_data.h  hardnested_bf_core.c  hardnested_bf_core.h  hardnested_bitarray_core.c  hardnested_bruteforce.c  hardnested_bruteforce.h  tables.h
software/src/HardnestedRecovery/pm3/: ansi.h  common.h  commonutil.c  commonutil.h  emojis.h  emojis_alt.h  ui.c  ui.h  util.c  util.h  util_posix.c  util_posix.h
software/src/compat/fmemopen/: libfmemopen.c  libfmemopen.h
software/src/lib/pthread/include/: pthread.h  sched.h  semaphore.h
software/src/xz/: CMakeLists.txt  README  configure.ac
software/src/xz-5.8.1/src/liblzma/: Makefile.am
software/src/xz/lib/: Makefile  Makefile.in  getopt-core.h  getopt-ext.h  getopt.c  getopt1.c  getopt_int.h
software/src/xz/src/common/: my_landlock.h  mythread.h  sysdefs.h  tuklib_cpucores.c  tuklib_exit.c  tuklib_integer.h  tuklib_mbstr_fw.c  tuklib_mbstr_nonprint.c  tuklib_mbstr_width.c  tuklib_mbstr_wrap.c  tuklib_mbstr_wrap.h  tuklib_open_stdxxx.c  tuklib_physmem.c  tuklib_progname.c  tuklib_progname.h
software/src/xz/src/liblzma/api/: lzma.h
software/src/xz/src/liblzma/api/lzma/: base.h  bcj.h  block.h  check.h  container.h  delta.h  filter.h  index.h  index_hash.h  lzma12.h  stream_flags.h  version.h  vli.h
software/src/xz/src/liblzma/check/: check.c  check.h  crc32_arm64.h  crc32_fast.c  crc32_loongarch.h  crc32_small.c  crc32_table_be.h  crc32_table_le.h  crc32_tablegen.c  crc64_fast.c  crc64_small.c  crc64_table_be.h  crc64_table_le.h  crc64_tablegen.c  crc_clmul_consts_gen.c  crc_common.h  crc_x86_clmul.h  sha256.c
software/src/xz/src/liblzma/common/: alone_decoder.c  alone_decoder.h  alone_encoder.c  auto_decoder.c  block_buffer_decoder.c  block_buffer_encoder.c  block_decoder.c  block_decoder.h  block_encoder.c  block_encoder.h  block_header_decoder.c  block_header_encoder.c  block_util.c  common.c  common.h  easy_buffer_encoder.c  easy_decoder_memusage.c  easy_encoder.c  easy_encoder_memusage.c  easy_preset.c  easy_preset.h  file_info.c  filter_buffer_decoder.c  filter_buffer_encoder.c  filter_common.c  filter_common.h  filter_decoder.c  filter_decoder.h  filter_encoder.c  filter_encoder.h  filter_flags_decoder.c  filter_flags_encoder.c  hardware_cputhreads.c  hardware_physmem.c  index.c  index.h  index_decoder.c  index_decoder.h  index_encoder.c  index_encoder.h  (+23 more)
software/src/xz/src/liblzma/delta/: delta_common.c  delta_decoder.c  delta_decoder.h  delta_encoder.c  delta_encoder.h  delta_private.h
software/src/xz/src/liblzma/lz/: lz_decoder.c  lz_decoder.h  lz_encoder.c  lz_encoder.h  lz_encoder_hash.h  lz_encoder_hash_table.h  lz_encoder_mf.c
software/src/xz/src/liblzma/lzma/: fastpos.h  fastpos_table.c  fastpos_tablegen.c  lzma2_decoder.c  lzma2_decoder.h  lzma2_encoder.c  lzma2_encoder.h  lzma_common.h  lzma_decoder.c  lzma_decoder.h  lzma_encoder.c  lzma_encoder.h  lzma_encoder_optimum_fast.c  lzma_encoder_optimum_normal.c  lzma_encoder_presets.c  lzma_encoder_private.h
software/src/xz/src/liblzma/rangecoder/: price.h  price_table.c  price_tablegen.c  range_decoder.h  range_encoder.h
software/src/xz/src/liblzma/simple/: arm.c  arm64.c  armthumb.c  ia64.c  powerpc.c  riscv.c  simple_coder.c  simple_coder.h  simple_decoder.c  simple_decoder.h  simple_encoder.c  simple_private.h  sparc.c  x86.c
(+367 files in other folders)
