[project]
name = "chameleon-ultra"
version = "2.0.0"
description = "The official CLI for the Chameleon Ultra"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
    "prompt-toolkit>=3.0.52",
    "pyserial>=3.5",
]

[project.scripts]
chameleon = "chameleon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chameleon"]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/.venv"]
search-path = ["script"]

[tool.ruff]


[project.optional-dependencies]
dev = [
    "pyrefly>=0.28.0",
    "ruff>=0.12.8",
]

